tests/ui/non_existent_attr.stderr
error[E0599]: no method named `non_existing_attribute` found for type `structopt::clap::Arg<'_, '_>` in the current scope
  --> $DIR/non_existent_attr.rs:13:10
   |
13 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
